--- a/app/index.html
+++ b/app/index.html
@@ -276,15 +276,19 @@
 </head>
 
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="./mainmenu.js"></script>
+<script src="./rightclickmenu.js"></script>
+<!-- <script src="./mainmenu.js"></script> -->
 <!-- <script src="./electron-default-menu/index.js"></script> -->
 <script>
   var store;
-
+  // let platform = process.platform;
+  // console.log("platform = ",platform);
   if (typeof require !== 'undefined') {
     // Electron IPC
     const ipc = require('electron').ipcRenderer;
     const electron = require('electron');
+
+
     // Electron version
     // config
     const Store = require('electron-store');
